<resources>
    <string name="app_name">OTPVerificationPractice</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_otp_on_this_given_mobile_number">We will send you OTP on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="icon">Icon</string>
    <string name="get_otp">GET OTP</string>
    <string name="_9110121513">9110121513</string>
    <string name="your_mobile_number">Your Mobile Number</string>
</resources>