<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".MainActivity"
    android:background="#21FFC107">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sendOtp_IV"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            app:srcCompat="@drawable/sendmail"
            android:contentDescription="@string/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextFirst"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_otp_on_this_given_mobile_number"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextSecond"
            />

        <TextView
            android:id="@+id/mobile_No_TV"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="your number"
            android:layout_margin="30dp"
            android:textStyle="bold"
            />

<!--        <TextView-->
<!--            android:id="@+id/mobileNoTV"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="30dp"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginEnd="30dp"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:layout_marginRight="30dp"-->
<!--            android:gravity="center"-->
<!--            android:hint="@string/your_mobile_number"-->
<!--            android:textColor="@color/colorTextSecond"-->
<!--            android:textSize="14sp"/>-->

<!--         <LinearLayout-->
<!--             android:layout_width="match_parent"-->
<!--             android:layout_height="wrap_content"-->
<!--             android:layout_marginStart="60dp"-->
<!--             android:layout_marginEnd="60dp"-->
<!--             android:gravity="center"-->
<!--             android:orientation="horizontal"-->
<!--             android:background="@drawable/backgroundbox">-->

<!--             <TextView-->
<!--                 android:layout_width="wrap_content"-->
<!--                 android:layout_height="40dp"-->
<!--                 android:text="+91"-->
<!--                 android:textColor="@color/colorTextFirst"-->
<!--                 android:textSize="16sp"-->
<!--                 android:textStyle="bold"-->
<!--                 android:layout_marginTop="9dp"-->
<!--                 />-->

<!--             <EditText-->
<!--                 android:id="@+id/input_mobile_number"-->
<!--                 android:layout_width="wrap_content"-->
<!--                 android:layout_height="48dp"-->
<!--                 android:background="@null"-->
<!--                 android:hint="@string/_9110121513"-->
<!--                 android:editable="false"-->
<!--                 android:layout_marginLeft="2dp"-->
<!--                 android:imeOptions="actionDone"-->
<!--                 android:inputType="number"-->
<!--                 android:importantForAutofill="no"-->
<!--                 android:textColor="@color/colorTextFirst"-->
<!--                 android:textSize="16sp"-->
<!--                 android:textStyle="bold" />-->


<!--         </LinearLayout>-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_otp"
                android:layout_margin="30dp"
                android:textColor="@color/colorTextFirst"
                android:textStyle="bold"
                android:background="@drawable/backbutton"
                />

            <ProgressBar
                android:id="@+id/progressbar_sending_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>
</ScrollView>